--- a/lang/en.json
+++ b/lang/en.json
@@ -69,7 +69,12 @@
   "btn_move_to_trash": "Move to Trash",
   "title_confirm_deletion": "Confirm Deletion",
   "text_confirm_deletion": "Are you sure you want to move {count} files to trash?",
+  "text_progress_deletion": "Deleting: {filename}",
   "title_success": "Success",
+  "title_removing_group_from_a_list": "The group was removed from the list",
+  "text_removing_group_from_a_list": "There were no duplicates left in the group, so it was removed from the list",
+  "title_removing_groups_from_a_list": "Groups Removed from List",
+  "text_removing_groups_from_a_list": "{group_count} groups had no duplicates left and were therefore removed from the list",
   "text_files_moved_to_trash": "{count} files moved to trash.",
   "title_error": "Error",
   "text_failed_to_delete_files": "Failed to delete files:\n{error}",
