--- a/lang/ru.json
+++ b/lang/ru.json
@@ -68,7 +68,12 @@
   "btn_move_to_trash": "Переместить в корзину",
   "title_confirm_deletion": "Подтвердите удаление",
   "text_confirm_deletion": "Вы действительно хотите переместить {count} файлов в корзину?",
+  "text_progress_deletion": "Удаление {filename}",
   "title_success": "Успех",
+  "title_removing_group_from_a_list": "Группа была удалена из списка",
+  "text_removing_group_from_a_list": "В группе не осталось дубликатов и поэтому она была удалена из списка",
+  "title_removing_groups_from_a_list": "Группы была удалена из списка",
+  "text_removing_groups_from_a_list": "В {group_count} группах не осталось дубликатов и поэтому они были удалены из списка",
   "text_files_moved_to_trash": "Файлов перемещено в корзину: {count}",
   "title_error": "Ошибка",
   "text_failed_to_delete_files": "Не удалось удалить файлы:\n{error}",
